# blackboxai-1749997722631

./: README.md  development_plan.txt
SeirChain/: CMakeLists.txt
SeirChain/Config/: CMakeLists.txt  Config.cpp  Config.hpp  consensus_settings.toml  economic_parameters.toml  mod.cpp  network_parameters.toml
SeirChain/Documentation/api_documentation/: README.md  whitepaper.md
SeirChain/Documentation/technical_specs/: README.md
SeirChain/Documentation/user_guides/: README.md
SeirChain/Interface/Applications/: defi_protocols.cpp  defi_protocols.rs  energy_trading.cpp  energy_trading.rs  supply_chain.cpp  supply_chain.rs
SeirChain/Interface/Economics/: governance_system.cpp  governance_system.rs  incentive_mechanisms.cpp  incentive_mechanisms.rs  waclanium_token.cpp  waclanium_token.rs
SeirChain/Interface/VirtualMachine/: parallel_processing.cpp  smart_contracts.cpp
SeirChain/Interface/Wallet/: fractal_wallet.cpp  fractal_wallet.hpp
SeirChain/Tests/integration_tests/: README.md
SeirChain/Tests/performance_tests/: README.md
SeirChain/Tests/unit_tests/: README.md
